# ChainReactionBot

./: .gitignore  .gitmodules  CMakeLists.txt  TODO.md  a.out  fun.cpp  httplib.h  main.cpp  test.cpp
.cache/clangd/index/: alloc.hpp.A491B4E4BB21C076.idx  asio.hpp.2AE28CA6D40EE9AC.idx  asio_no_tls_client.hpp.01B8B3334FDE584E.idx  base.hpp.11CECC01A4BF30FE.idx  base.hpp.222114702ED7D8D7.idx  base.hpp.AA0F39DB39428D6F.idx  base.hpp.CED2D346030E938C.idx  base64.hpp.8738EF0E84D8FE4A.idx  basic.hpp.0B34A63211F212E1.idx  basic.hpp.C28FAD5775D7ACFD.idx  chrono.hpp.873206D35F9965DA.idx  client.hpp.7E07FC4CE99C2A30.idx  client_endpoint.hpp.C990735AA50A07E1.idx  close.hpp.D7289FC1E0E34AE8.idx  connection.hpp.2D5FF4814CB3E585.idx  connection.hpp.8CCBFB0DAC1828A7.idx  connection.hpp.92DD8E5B7EB2FB89.idx  connection.hpp.A3314C2C7F9B6FB0.idx  connection_base.hpp.B51B1D0D079D7C50.idx  connection_hdl.hpp.C277093791D50706.idx  connection_impl.hpp.FD207AC0C836EB08.idx  constants.hpp.00ED4EEE425B6B38.idx  core_client.hpp.3C69C3B41DF8C88D.idx  cpp11.hpp.C556FECFE6E4733D.idx  disabled.hpp.F04142A2D482DF21.idx  endpoint.hpp.0CBE290065B20875.idx  endpoint.hpp.2AB1C830E2EF9A94.idx  endpoint.hpp.59CD10312BE75620.idx  endpoint.hpp.678BBD51D2BCB7A0.idx  endpoint_base.hpp.9D6B8B054235D89C.idx  endpoint_impl.hpp.8266BFAEBC47733C.idx  error.hpp.64E9F671CE7CFF0C.idx  extension.hpp.E2202B964949ED14.idx  frame.hpp.1FD878770547B907.idx  functional.hpp.568B0FFE7CA3EF57.idx  hybi00.hpp.592FBE70D2039E9B.idx  hybi07.hpp.2C24DC9E46667062.idx  hybi08.hpp.9CA57F5586B19B84.idx  hybi13.hpp.8575C70CADD02BD2.idx  levels.hpp.DDF42D56B20DA6ED.idx  (+27 more)
bot/: CMakeLists.txt
bot/include/: agent.hpp  chainreaction.hpp  mcts.hpp
bot/src/: ChainReaction.cpp
client/: CMakeLists.txt
client/include/: client.hpp
client/src/: client.cpp
game/chainreaction/: CMakeLists.txt
game/chainreaction/include/: chainreaction.hpp
game/chainreaction/src/: chainreaction.cpp
include/: chainreaction.hpp  client.hpp  mcts.hpp  montecarlo.hpp  montetree.hpp
src/: CMakeLists.txt  ChainReaction.cpp  client.cpp  montecarlo.cpp
tests/: CMakeLists.txt  test_chain.cpp
